--- a/styles.css
+++ b/styles.css
@@ -1,21 +1,30 @@
-body {}
+body {
+  background-color: hsl(0, 0%, 30%);
+}
 
-.board {}
+.board {
+  display: flex;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 50%;
+  height: 75%;
+  flex-direction: column;
+  flex-wrap: nowrap;
+  justify-content: center;
+}
 
-.square1 {}
+.row1, .row2, .row3 {
+  position: relative;
+  width: 100%;
+  height: 33%;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+}
 
-.square2 {}
-
-.square3 {}
-
-.square4 {}
-
-.square5 {}
-
-.square6 {}
-
-.square7 {}
-
-.square8 {}
-
-.square9 {}
+.square1, .square2, .square3, .square4, .square5, .square6, .square7, .square8, .square9 {
+  width: 33%;
+  border: 0.3rem solid black;
+}
