--- a/styles.css
+++ b/styles.css
@@ -15,7 +15,9 @@ body {
   justify-content: center;
 }
 
-.row1, .row2, .row3 {
+.row1,
+.row2,
+.row3 {
   position: relative;
   width: 100%;
   height: 33%;
@@ -24,7 +26,15 @@ body {
   flex-wrap: nowrap;
 }
 
-.square1, .square2, .square3, .square4, .square5, .square6, .square7, .square8, .square9 {
+.square1,
+.square2,
+.square3,
+.square4,
+.square5,
+.square6,
+.square7,
+.square8,
+.square9 {
   width: 33%;
   border: 0.3rem solid black;
   display: flex;
@@ -33,7 +43,8 @@ body {
   user-select: none;
 }
 
-.player-x, .player-o {
+.player-x,
+.player-o {
   font-size: 5rem;
   color: hsl(52, 38%, 55%);
 }
