--- a/styles.css
+++ b/styles.css
@@ -1,18 +1,51 @@
 body {
   background-color: hsl(0, 0%, 30%);
+  margin: 0;
+}
+
+.container {
+  position: fixed;
+  display: flex;
+  width: 100%;
+  height: 100%;
+  flex-direction: row;
+  align-items: center;
+  gap: 3rem;
+}
+
+.scoreContainer {
+  position: relative;
+  bottom: 8rem;
+  display: flex;
+  flex-direction: column;
+  flex-wrap: nowrap;
+  line-height: 1;
+  padding: 0rem 3rem;
+  gap: 2rem;
+}
+
+.player,
+.playerScore p {
+  font-size: 3rem;
+  margin: 0px;
+}
+
+.playerScore {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  gap: 2rem;
 }
 
 .board {
   display: flex;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
+  position: relative;
   width: 50%;
   height: 75%;
   flex-direction: column;
   flex-wrap: nowrap;
   justify-content: center;
+  flex-grow: 1;
 }
 
 .row1,
